--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 		<h1>Draw an Image you moron</h1>
 
 		<div id="editor-container">
-				<div id="tools-toolbar">
-					<ul>
-						<li class="tool">Brush</li>
-						<li class="tool">Line</li>
-						<li class="tool">Cyrcle</li>
-						<li class="tool">Square</li>
-						<li class="tool">Eraser</li>
-						<li class="tool">Save image</li>
-					</ul>
-				</div>
-	
-			<canvas id="canvas"></canvas>
+			<div id="tools-toolbar">
+				<ul>
+					<li class="tool">Brush</li>
+					<li class="tool">Line</li>
+					<li class="tool">Cyrcle</li>
+					<li class="tool">Square</li>
+					<li class="tool">Eraser</li>
+					<li class="tool">Save image</li>
+				</ul>
+			</div>
+
+			<canvas id="canvas" width="1142" height="500"></canvas>
 		</div>
 	</div>
 </body>
