Added undo button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<li class="tool">Cyrcle</li>
 					<li class="tool">Square</li>
 					<li class="tool">Eraser</li>
+					<li class="tool">Undo</li>
 					<li class="tool">Save image</li>
 				</ul>
 			</div>
