Added the logo to the page.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<div id="wrapper">
+		<img src="img/logo.png" id="logo">
 		<h1>Draw an Image you moron</h1>
 
 		<div id="editor-container">
