Removed the brush icon.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/icons.css">
 </head>
 <body>
 	<div id="wrapper">
@@ -13,7 +14,7 @@
 		<div id="editor-container">
 			<div id="tools-toolbar">
 				<ul>
-					<li class="tool">Brush</li>
+					<li class="tool"><img src="img/brush.png" id="brush"></li>
 					<li class="tool">Line</li>
 					<li class="tool">Cyrcle</li>
 					<li class="tool">Square</li>
