--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 		<div id="editor-container">
 			<div id="tools-toolbar">
 				<ul>
-					<li class="tool"><img src="img/brush.png" id="brush"></li>
-					<li class="tool">Line</li>
-					<li class="tool">Cyrcle</li>
-					<li class="tool">Square</li>
-					<li class="tool">Eraser</li>
-					<li class="tool">Undo</li>
-					<li class="tool">Save image</li>
+					<li class="tool"><img src="img/brush.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/line.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/circle.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/square.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/eraser.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/undo.png" class="tool-icon"></li>
 				</ul>
 			</div>
 
