Added the icons to the page.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 		<div id="editor-container">
 			<div id="tools-toolbar">
 				<ul>
-					<li class="tool"><img src="img/brush.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/line.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/paintbrush.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/diag-line.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/circle.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/square.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/eraser.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/undo.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/save.png" class="tool-icon"></li>
 				</ul>
 			</div>
 
