Added the bin icon.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<li class="tool"><img src="img/square.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/eraser.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/undo.png" class="tool-icon"></li>
+					<li class="tool"><img src="img/bin.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/save.png" class="tool-icon"></li>
 				</ul>
 			</div>
