Created js folder and a setup file for the canvas.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
 			<canvas id="canvas" width="1142" height="500"></canvas>
 		</div>
 	</div>
+
+	<script type="text/javascript" src="js/setup.js"></script>
 </body>
 </html>
