--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 	</div>
 
 	<script type="text/javascript" src="js/setup.js"></script>
+	<script type="text/javascript" src="js/toolbar.js"></script>
 </body>
 </html>
