Getting the id of the clicked element.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<div id="editor-container">
 			<div id="tools-toolbar">
 				<ul>
-					<li class="tool"><img src="img/paintbrush.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/diag-line.png" class="tool-icon"></li>
+					<li class="tool" id="brush"><img src="img/paintbrush.png" class="tool-icon"></li>
+					<li class="tool" id="line"><img src="img/diag-line.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/circle.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/square.png" class="tool-icon"></li>
 					<li class="tool"><img src="img/eraser.png" class="tool-icon"></li>
