Added ids to all of the icons.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 				<ul>
 					<li class="tool" id="brush"><img src="img/paintbrush.png" class="tool-icon"></li>
 					<li class="tool" id="line"><img src="img/diag-line.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/circle.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/square.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/eraser.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/undo.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/bin.png" class="tool-icon"></li>
-					<li class="tool"><img src="img/save.png" class="tool-icon"></li>
+					<li class="tool" id="circle"><img src="img/circle.png" class="tool-icon"></li>
+					<li class="tool" id="square"><img src="img/square.png" class="tool-icon"></li>
+					<li class="tool" id="eraser"><img src="img/eraser.png" class="tool-icon"></li>
+					<li class="tool" id="undo"><img src="img/undo.png" class="tool-icon"></li>
+					<li class="tool" id="bin"><img src="img/bin.png" class="tool-icon"></li>
+					<li class="tool" id="save"><img src="img/save.png" class="tool-icon"></li>
 				</ul>
 			</div>
 
