Image saving now works.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li class="tool" id="eraser"><img src="img/eraser.png" class="tool-icon"></li>
 					<li class="tool" id="undo"><img src="img/undo.png" class="tool-icon"></li>
 					<li class="tool" id="bin"><img src="img/bin.png" class="tool-icon"></li>
-					<li class="tool" id="save"><img src="img/save.png" class="tool-icon"></li>
+					<li class="tool"><a download="name.png" id="save"><img src="img/save.png" class="tool-icon"></a></li>
 				</ul>
 			</div>
 
