--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 
 	<script type="text/javascript" src="js/setup.js"></script>
 	<script type="text/javascript" src="js/toolbar.js"></script>
+	<script type="text/javascript" src="js/brush.js"></script>
 </body>
 </html>
