--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
 	<script type="text/javascript" src="js/setup.js"></script>
 	<script type="text/javascript" src="js/toolbar.js"></script>
 	<script type="text/javascript" src="js/brush.js"></script>
+	<script type="text/javascript" src="js/line.js"></script>
 </body>
 </html>
