Moved the toolbar css styles to a seperate file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/toolbar.css">
+	<link rel="stylesheet" type="text/css" href="css/side-toolbar.css">
 	<link rel="stylesheet" type="text/css" href="css/icons.css">
 </head>
 <body>
@@ -29,8 +31,14 @@
 
 			<div class="tools-toolbar left-border">
 				<ul>
-					<li class="tool"></li>
-					<li class="tool"></li>
+					<li class="tool"><a id="red"></a></li>
+					<li class="tool"><a id="blue"></a></li>
+					<li class="tool"><a id="yellow"></a></li>
+					<li class="tool"><a id="green"></a></li>
+					<li class="tool"><a id="orange"></a></li>
+					<li class="tool"><a id="white"></a></li>
+					<li class="tool"><a id="gray"></a></li>
+					<li class="tool"><a id="black"></a></li>
 				</ul>
 			</div>
 		</div>
