Css backround color style is applied to all of the elements acording to their id.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
 			<div class="tools-toolbar left-border">
 				<ul>
-					<li class="tool"><a id="red"></a></li>
-					<li class="tool"><a id="blue"></a></li>
-					<li class="tool"><a id="yellow"></a></li>
-					<li class="tool"><a id="green"></a></li>
-					<li class="tool"><a id="orange"></a></li>
-					<li class="tool"><a id="white"></a></li>
-					<li class="tool"><a id="gray"></a></li>
-					<li class="tool"><a id="black"></a></li>
+					<li class="tool"><a class="color" id="red"></a></li>
+					<li class="tool"><a id="blue" class="color"></a></li>
+					<li class="tool"><a id="yellow" class="color"></a></li>
+					<li class="tool"><a id="green" class="color"></a></li>
+					<li class="tool"><a id="orange" class="color"></a></li>
+					<li class="tool"><a id="white" class="color"></a></li>
+					<li class="tool"><a id="gray" class="color"></a></li>
+					<li class="tool"><a id="black" class="color"></a></li>
 				</ul>
 			</div>
 		</div>
