--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			<div class="tools-toolbar left-border">
 				<ul>
-					<li class="tool"><a class="color" id="red"></a></li>
+					<li class="tool"><a id="red" class="color"></a></li>
 					<li class="tool"><a id="blue" class="color"></a></li>
 					<li class="tool"><a id="yellow" class="color"></a></li>
 					<li class="tool"><a id="green" class="color"></a></li>
