Made the eraser tool.
* Bug #4: When selected the eraser tool and click on a line, it's fill disappears.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	<script type="text/javascript" src="js/toolbar.js"></script>
 	<script type="text/javascript" src="js/brush.js"></script>
 	<script type="text/javascript" src="js/line.js"></script>
+	<script type="text/javascript" src="js/eraser.js"></script>
 	<script type="text/javascript" src="js/save.js"></script>
 	<script type="text/javascript" src="js/side-toolbar.js"></script>
 </body>
