--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<script type="text/javascript" src="js/brush.js"></script>
 	<script type="text/javascript" src="js/line.js"></script>
 	<script type="text/javascript" src="js/circle.js"></script>
+	<script type="text/javascript" src="js/square.js"></script>
 	<script type="text/javascript" src="js/eraser.js"></script>
 	<script type="text/javascript" src="js/save.js"></script>
 	<script type="text/javascript" src="js/side-toolbar.js"></script>
