--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<script type="text/javascript" src="js/circle.js"></script>
 	<script type="text/javascript" src="js/square.js"></script>
 	<script type="text/javascript" src="js/eraser.js"></script>
+	<script type="text/javascript" src="js/bin.js"></script>
 	<script type="text/javascript" src="js/save.js"></script>
 	<script type="text/javascript" src="js/side-toolbar.js"></script>
 </body>
