Jquery is working.*

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 		<title>Image Drawer</title>
 	</head>
 	<body>
-		<p>
+		<p class=".test">
 			Image Drawer
 		</p>
 	</body>
 
+	<script src="./node_modules/jquery/dist/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
+
 	<script>
 		require('./renderer');
 	</script>
+
 </html>
