JQuery is tested and is working.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>Image Drawer</title>
 	</head>
 	<body>
-		<p class=".test">
-			Image Drawer
-		</p>
+		<div id="wrapper">
+			<p class="test">Image Drawer</p>
+		</div>
 	</body>
 
 	<script src="./node_modules/jquery/dist/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
