--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			
+
 		</div>
 	</body>
 
 	<script src="./node_modules/jquery/dist/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
+	<script src="./node_modules/paper/dist/paper-full.min.js"></script>
 
 	<script>
 		require('./renderer');
