Fixed a bug with loading renderer.js with paperscript attribute.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 		<div id="wrapper">
 			<h1>Image Drawer</h1>
 
-			<canvas id="drawing"></canvas>
+			<canvas id="myCanvas" resize></canvas>
 		</div>
 	</body>
 
 	<script src="./node_modules/jquery/dist/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
 	<script src="./node_modules/paper/dist/paper-full.min.js"></script>
 
-	<script>
-		require('./renderer');
-	</script>
+	<script type="text/paperscript" canvas="myCanvas" src="renderer.js" async></script>
 
 </html>
