Changed path for "renderer.js".

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 	<script src="./node_modules/jquery/dist/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
 	<script src="./node_modules/paper/dist/paper-full.min.js"></script>
 
-	<script type="text/paperscript" canvas="myCanvas" src="renderer.js" async></script>
+	<script type="text/paperscript" canvas="myCanvas" src="src/renderer.js" async></script>
 
 </html>
