--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<h1>Image Drawer</h1>
+			<div id="top-toolbar">
+				
+			</div>
+			<div id="side-toolbar">
 
+			</div>
 			<canvas id="myCanvas" resize></canvas>
 		</div>
 	</body>
